# optimizationtools

./: .ycm_extra_conf.py  BUILD  Bench.cpp  CMakeLists.txt  LICENSE  README.md  TimedBench.cpp  WORKSPACE  bench.cpp  dataset.hpp  datasets.hpp  info.hpp  ini2csv  ini2plot  initools.py  timedbench.cpp  tools.cpp  tools.hpp
include/optimizationtools/containers/: doubly_indexed_map.hpp  indexed_4ary_heap.hpp  indexed_binary_heap.hpp  indexed_map.hpp  indexed_set.hpp  partial_set.hpp  sorted_on_demand_array.hpp  space_efficient_array.hpp
include/optimizationtools/graph/: abstract_graph.hpp  adjacency_list_graph.hpp  adjacency_matrix_graph.hpp  bipartite_graph.hpp  clique.hpp
include/optimizationtools/utils/: common.hpp  compose_stream.hpp  logger.hpp  output.hpp  parameters.hpp  timer.hpp  utils.hpp
optimizationtools/: BUILD  bench_process.py  bench_run.py  binary_heap.hpp  column_generation_solver.hpp  doubly_indexed_map.hpp  indexed_binary_heap.hpp  indexed_map.hpp  indexed_set.hpp  info.cpp  info.hpp  sorted_on_demand_array.hpp  utils.hpp
optimizationtools/containers/: BUILD  doubly_indexed_map.hpp  indexed_binary_heap.hpp  indexed_map.hpp  indexed_set.hpp  partial_set.hpp  space_efficient_array.hpp
optimizationtools/graph/: BUILD  abstract_graph.hpp  adjacency_list_graph.cpp  adjacency_list_graph.hpp  adjacency_matrix_graph.hpp  clique_graph.cpp  clique_graph.hpp
optimizationtools/utils/: BUILD  compose_stream.hpp  info.cpp  info.hpp  logger.cpp  logger.hpp  parameters.cpp  parameters.hpp  timer.cpp  utils.hpp
scripts/: bench_process.py  bench_run.py  process_tests.py  tests_process.py
src/: CMakeLists.txt
src/containers/: CMakeLists.txt
src/graph/: CMakeLists.txt  adjacency_list_graph.cpp  bipartite_graph.cpp  clique.cpp
src/utils/: CMakeLists.txt  output.cpp
test/: CMakeLists.txt
test/containers/: CMakeLists.txt  space_efficient_array_test.cpp
